# 3D_arm_mobile_robot

./: README.md
robot_ws/: Dockerfile  docker-compose.yml  docker_entrypoint.sh
robot_ws/src/my_robot_moveit_config/: CMakeLists.txt  package.xml
robot_ws/src/my_robot_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
robot_ws/src/my_robot_moveit_config/launch/: move_group.launch.py
robot_ws/src/my_robot_moveit_config/srdf/: my_robot.srdf
robot_ws/src/robot_arm_control/: CMakeLists.txt  package.xml  setup.py
robot_ws/src/robot_arm_control/config/: camera_info.yaml
robot_ws/src/robot_arm_control/launch/: coordinate_transformer_launch.py
robot_ws/src/robot_arm_control/robot_arm_control/: arm_gripper_controller_node.py  coordinate_transformer_node.py
robot_ws/src/robot_description/: CMakeLists.txt  package.xml
robot_ws/src/robot_description/models/my_robot/: model.config
robot_ws/src/robot_description/models/my_robot/urdf/: camera.xacro  mobile_base.xacro
robot_ws/src/robot_description/urdf/: gripper.xacro  robot.urdf.xacro  robot_arm.xacro
robot_ws/src/robot_description/worlds/: pick_and_place_world.world
robot_ws/src/robot_msgs/: CMakeLists.txt  package.xml
robot_ws/src/robot_msgs/msg/: DetectedShape.msg  DetectedShapes.msg
robot_ws/src/robot_msgs/srv/: PickObject.srv  PlaceObject.srv
robot_ws/src/robot_navigation/: CMakeLists.txt  package.xml  setup.py
robot_ws/src/robot_navigation/config/: amcl_config.yaml  global_costmap.yaml  local_costmap.yaml  nav2_params.yaml
robot_ws/src/robot_navigation/launch/: navigation_launch.py
robot_ws/src/robot_navigation/robot_navigation/: simple_nav_goal_publisher.py
robot_ws/src/robot_task_manager/: CMakeLists.txt  package.xml  setup.py
robot_ws/src/robot_task_manager/launch/: task_orchestration_launch.py
robot_ws/src/robot_task_manager/robot_task_manager/: task_orchestration_node.py
robot_ws/src/robot_vision/: CMakeLists.txt  package.xml  setup.py
robot_ws/src/robot_vision/launch/: vision_launch.py
robot_ws/src/robot_vision/robot_vision/: vision_node.py
