<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>my_robot_moveit_config</name>
  <version>0.0.0</version>
  <description>MoveIt2 configuration package for my_robot</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <build_depend>robot_description</build_depend>
  <build_depend>moveit_configs_utils</build_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>urdf</exec_depend>
</package>
